terminal: cleanup TerminalContainer - get rid of JBTerminalPanel
GitOrigin-RevId: 0dba8ac04e130f895e29a67e409414d70aec9f60