@@ -10,10 +10,7 @@ import com.intellij.openapi.editor.colors.EditorColorsScheme;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.Splitter;
 import com.intellij.openapi.util.Disposer;
-import com.intellij.openapi.util.Key;
-import com.intellij.terminal.JBTerminalWidget;
 import com.intellij.terminal.ui.TerminalWidget;
-import com.intellij.ui.ClientProperty;
 import com.intellij.ui.OnePixelSplitter;
 import com.intellij.ui.content.Content;
 import com.intellij.util.ObjectUtils;
@@ -30,21 +27,18 @@ import org.jetbrains.plugins.terminal.TerminalView;
 
 import javax.swing.*;
 import java.awt.*;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.*;
 import java.util.List;
 
 public class TerminalContainer {
 
   private static final Logger LOG = Logger.getInstance(TerminalContainer.class);
-  private static final Key<TerminalWidget> TERMINAL_WIDGET_KEY = Key.create(TerminalWidget.class.getSimpleName());
 
   private final Content myContent;
   private final TerminalWidget myTerminalWidget;
   private final Project myProject;
   private final TerminalView myTerminalView;
-  private JPanel myPanel;
+  private @Nullable TerminalWrapperPanel myWrapperPanel;
   private boolean myForceHideUiWhenSessionEnds = false;
   private final Runnable myTerminationListener;
 
@@ -56,7 +50,6 @@ public class TerminalContainer {
     myContent = content;
     myTerminalWidget = terminalWidget;
     myTerminalView = terminalView;
-    myPanel = createPanel(terminalWidget);
     myTerminationListener = () -> {
       ApplicationManager.getApplication().invokeLater(() -> processSessionCompleted(), myProject.getDisposed());
     };
@@ -75,50 +68,37 @@ public class TerminalContainer {
 
   public void closeAndHide() {
     myForceHideUiWhenSessionEnds = true;
-    TtyConnector connector = myTerminalWidget.getTtyConnectorAccessor().getTtyConnector();
+    TtyConnector connector = myTerminalWidget.getTtyConnector();
     if (connector != null && connector.isConnected()) {
       connector.close();
     }
     else {
-      // When "Close session when it ends" is off, terminal session is shown even with terminated shell process.
+      // When "Close session when it ends" is off, terminal session is shown even with terminated process.
       processSessionCompleted();
     }
   }
 
-  private static @NotNull JPanel createPanel(@NotNull TerminalWidget terminalWidget) {
-    JPanel panel = new JPanel(new BorderLayout());
-    panel.setBorder(null);
-    panel.setFocusable(false);
-    JComponent component = terminalWidget.getComponent();
-    ClientProperty.put(component, TERMINAL_WIDGET_KEY, terminalWidget);
-    panel.add(component, BorderLayout.CENTER);
-    return panel;
-  }
-
-  public @NotNull JComponent getComponent() {
-    return myPanel;
+  public @NotNull TerminalWrapperPanel getWrapperPanel() {
+    if (myWrapperPanel == null) {
+      myWrapperPanel = new TerminalWrapperPanel(this);
+    }
+    return myWrapperPanel;
   }
 
   public void split(boolean vertically, @NotNull TerminalWidget newTerminalWidget) {
     boolean hasFocus = myTerminalWidget.hasFocus();
-    JPanel parent = myPanel;
-    parent.remove(myTerminalWidget.getComponent());
-
-    myPanel = createPanel(myTerminalWidget);
-
-    Splitter splitter = createSplitter(vertically);
-    splitter.setFirstComponent(myPanel);
+    TerminalWrapperPanel newParent = getWrapperPanel();
+    myWrapperPanel = new TerminalWrapperPanel(this);
     TerminalContainer newContainer = new TerminalContainer(myProject, myContent, newTerminalWidget, myTerminalView);
-    splitter.setSecondComponent(newContainer.getComponent());
-
-    parent.add(splitter, BorderLayout.CENTER);
-    parent.revalidate();
+    Splitter splitter = createSplitter(vertically, myWrapperPanel, newContainer.getWrapperPanel());
+    newParent.setChildSplitter(splitter);
     if (hasFocus) {
-      requestFocus(myTerminalWidget);
+      myTerminalWidget.requestFocus();
     }
   }
 
-  private static @NotNull Splitter createSplitter(boolean vertically) {
+  private static @NotNull Splitter createSplitter(boolean vertically,
+                                                  @NotNull JComponent firstComponent, @NotNull JComponent secondComponent) {
     Splitter splitter = new OnePixelSplitter(vertically, 0.5f, 0.1f, 0.9f);
     splitter.setDividerWidth(JBUI.scale(1));
     EditorColorsScheme scheme = EditorColorsManager.getInstance().getGlobalScheme();
@@ -126,31 +106,21 @@ public class TerminalContainer {
     if (color != null) {
       splitter.getDivider().setBackground(color);
     }
+    splitter.setFirstComponent(firstComponent);
+    splitter.setSecondComponent(secondComponent);
     return splitter;
   }
 
   private void processSessionCompleted() {
-    Container parent = myPanel.getParent();
-    if (parent instanceof Splitter) {
-      TerminalWidget nextToFocus = null;
-      if (myTerminalWidget.hasFocus()) {
-        nextToFocus = getNextSplitTerminal(true);
-      }
-      Splitter splitter = (Splitter)parent;
-      parent = parent.getParent();
-      JComponent otherComponent = myPanel.equals(splitter.getFirstComponent()) ? splitter.getSecondComponent()
-                                                                               : splitter.getFirstComponent();
-      Component realComponent = unwrapComponent(otherComponent);
-      if (realComponent instanceof JBTerminalWidget) {
-        TerminalContainer otherContainer = myTerminalView.getContainer((JBTerminalWidget)realComponent);
-        otherContainer.myPanel = (JPanel)parent;
-      }
-      realComponent.getParent().remove(realComponent);
-      parent.remove(splitter);
-      parent.add(realComponent, BorderLayout.CENTER);
-      parent.revalidate();
+    TerminalWrapperPanel thisPanel = getWrapperPanel();
+    if (thisPanel.getParent() instanceof Splitter splitter) {
+      TerminalWidget nextToFocus = myTerminalWidget.hasFocus() ? getNextSplitTerminal(true) : null;
+      TerminalWrapperPanel parent = getSplitterParent(splitter);
+      TerminalWrapperPanel otherPanel = splitter.getFirstComponent().equals(thisPanel) ? (TerminalWrapperPanel)splitter.getSecondComponent()
+                                                                                       : (TerminalWrapperPanel)splitter.getFirstComponent();
+      parent.transferChildFrom(otherPanel);
       if (nextToFocus != null) {
-        requestFocus(nextToFocus);
+        nextToFocus.requestFocus();
       }
       cleanup();
       Disposer.dispose(myTerminalWidget);
@@ -192,7 +162,7 @@ public class TerminalContainer {
   }
 
   public boolean isSplitTerminal() {
-    return findRootSplitter() != null;
+    return getParentSplitter(myWrapperPanel) != null;
   }
 
   public @Nullable TerminalWidget getNextSplitTerminal(boolean forward) {
@@ -212,7 +182,7 @@ public class TerminalContainer {
   private @NotNull List<TerminalWidget> listTerminals() {
     Splitter rootSplitter = findRootSplitter();
     if (rootSplitter == null) {
-      return Collections.singletonList(myTerminalWidget);
+      return List.of(myTerminalWidget);
     }
     List<TerminalWidget> terminals = new ArrayList<>();
     traverseSplitters(rootSplitter, terminals);
@@ -220,58 +190,100 @@ public class TerminalContainer {
   }
 
   private void traverseSplitters(@NotNull Splitter splitter, @NotNull List<TerminalWidget> terminals) {
-    traverseParentPanel(splitter.getFirstComponent(), terminals);
-    traverseParentPanel(splitter.getSecondComponent(), terminals);
+    traverseWrapperPanel((TerminalWrapperPanel)splitter.getFirstComponent(), terminals);
+    traverseWrapperPanel((TerminalWrapperPanel)splitter.getSecondComponent(), terminals);
   }
 
-  private void traverseParentPanel(@NotNull JComponent parentPanel, @NotNull List<TerminalWidget> terminals) {
-    Component[] components = parentPanel.getComponents();
-    if (components.length == 1) {
-      Component c = components[0];
-      if (c instanceof Splitter) {
-        traverseSplitters((Splitter)c, terminals);
-      }
-      else {
-        TerminalWidget widget = getWidgetByComponent(c);
-        if (widget != null) {
-          terminals.add(widget);
-        }
-      }
+  private void traverseWrapperPanel(@NotNull TerminalWrapperPanel panel, @NotNull List<TerminalWidget> terminals) {
+    Object child = panel.validateAndGetChild();
+    if (child instanceof Splitter splitter) {
+      traverseSplitters(splitter, terminals);
     }
-  }
-
-  private static @Nullable TerminalWidget getWidgetByComponent(@NotNull Component c) {
-    return ClientProperty.get(c, TERMINAL_WIDGET_KEY);
+    else {
+      terminals.add(((TerminalContainer)child).myTerminalWidget);
+    }
   }
 
   private @Nullable Splitter findRootSplitter() {
-    Splitter splitter = ObjectUtils.tryCast(myPanel.getParent(), Splitter.class);
+    Splitter splitter = getParentSplitter(myWrapperPanel);
     while (splitter != null) {
-      Component panel = splitter.getParent();
-      Splitter parentSplitter = panel != null ? ObjectUtils.tryCast(panel.getParent(), Splitter.class) : null;
-      if (parentSplitter != null) {
-        splitter = parentSplitter;
+      Splitter parentSplitter = getParentSplitter(getSplitterParent(splitter));
+      if (parentSplitter == null) break;
+      splitter = parentSplitter;
+    }
+    return splitter;
+  }
+
+  private static @Nullable Splitter getParentSplitter(@Nullable TerminalWrapperPanel panel) {
+    return panel != null ? ObjectUtils.tryCast(panel.getParent(), Splitter.class) : null;
+  }
+
+  private static @NotNull TerminalWrapperPanel getSplitterParent(@NotNull Splitter splitter) {
+    return (TerminalWrapperPanel)splitter.getParent();
+  }
+
+  private static class TerminalWrapperPanel extends JPanel {
+    private TerminalContainer myTerminal;
+
+    private TerminalWrapperPanel(@NotNull TerminalContainer terminal) {
+      super(new BorderLayout());
+      setBorder(null);
+      setFocusable(false);
+      setChildTerminal(terminal);
+    }
+
+    private void setChildTerminal(@NotNull TerminalContainer terminal) {
+      if (myTerminal != null) {
+        throw new IllegalStateException("Cannot set a new terminal when another terminal is still set");
+      }
+      myTerminal = terminal;
+      myTerminal.myWrapperPanel = this;
+      setChildComponent(terminal.myTerminalWidget.getComponent());
+    }
+
+    private void setChildSplitter(@NotNull Splitter splitter) {
+      myTerminal = null;
+      setChildComponent(splitter);
+    }
+
+    private void setChildComponent(@NotNull Component childComponent) {
+      Container parent = childComponent.getParent();
+      if (parent != null) {
+        parent.remove(childComponent);
+      }
+      removeAll();
+      add(childComponent, BorderLayout.CENTER);
+      revalidate();
+    }
+
+    private void transferChildFrom(@NotNull TerminalWrapperPanel other) {
+      Object childObj = other.validateAndGetChild();
+      if (childObj instanceof TerminalContainer otherTerminal) {
+        setChildTerminal(otherTerminal);
       }
       else {
-        return splitter;
+        setChildSplitter((Splitter)childObj);
       }
     }
-    return null;
-  }
 
-  private static @NotNull Component unwrapComponent(@NotNull JComponent component) {
-    Component[] components = component.getComponents();
-    if (components.length == 1) {
-      Component c = components[0];
-      if (getWidgetByComponent(c) != null || c instanceof Splitter) {
-        return c;
+    private @NotNull Object /* TerminalContainer | Splitter */ validateAndGetChild() {
+      Component[] children = getComponents();
+      if (children.length != 1) {
+        throw new IllegalStateException("Expected 1 child, but got " + children.length + ": " + Arrays.toString(children));
+      }
+      Component child = Objects.requireNonNull(children[0]);
+      if (myTerminal != null) {
+        if (child == myTerminal.myTerminalWidget.getComponent()) {
+          return myTerminal;
+        }
+        throw new IllegalStateException("Expected terminal widget (" + myTerminal.myTerminalWidget.getComponent() + "), got " + child);
+      }
+      else {
+        if (child instanceof Splitter splitter) {
+          return splitter;
+        }
+        throw new IllegalStateException("Expected splitter, got " + child);
       }
     }
-    LOG.error("Cannot unwrap " + component + ", children: " + Arrays.toString(components));
-    return component;
-  }
-
-  public void requestFocus(@NotNull TerminalWidget terminal) {
-    terminal.requestFocus();
   }
 }
